[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "quickshift"
version = "0.0.1"
dependencies = ["numpy", "scikit-learn"]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Meher Malladi", email = "rm.meher97@gmail.com" }]


[project.optional-dependencies]
test = ["pytest", "pytest-datadir"]

[tool.scikit-build]
wheel.packages = ["python/quickshift"]
build-dir = "build/{wheel_tag}"
cmake.version = ">=3.28"
cmake.build-type = "Release"
build.verbose = true
editable.mode = "redirect"
editable.rebuild = true
editable.verbose = true

[tool.cibuildwheel]
archs = ["auto64"]
build = "cp310-*"
skip = ["*-musllinux*", "pp*"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ['tests']
